--- a/assets/css/mainstyle.css
+++ b/assets/css/mainstyle.css
@@ -128,7 +128,7 @@ footer {
   border: none;
   font-size: 24px;
   cursor: pointer;
-  position: absolute;
+  position: relative;
   top: -1px;
   right: 24px;
   -webkit-text-stroke-width: 1px;
