--- a/assets/css/mainstyle.css
+++ b/assets/css/mainstyle.css
@@ -86,6 +86,22 @@ main > div > * {
     text-shadow: 0px 0px 5px #ff69ad;
 }
 
+.topbox {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
+    max-height: 30px;
+}
+
+.topbox > button {
+    position: absolute;
+    top:-2px;
+    transform: translateX(15px);
+}
+
 /* Footer Stuff */
 
 footer {
@@ -98,51 +114,51 @@ footer {
 /* Drop Down Stuff */
 
 .dropdown {
-  display: inline-block;
-  position: relative;
+    display: inline-block;
+    position: relative;
+    z-index: 5;
 }
 
 .dropdown-box {
-  display: none;
-  position: absolute;
-  border-radius: 15px;
-  background-color: #4e4e4eae;
-  max-width: 100px;
-  box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.25);
-  padding: 12px 16px;
-  z-index: 1;
+    display: none;
+    position: absolute;
+    border-radius: 15px;
+    background-color: #4e4e4eae;
+    max-width: 100px;
+    box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.25);
+    padding: 12px 16px;
+    z-index: 5;
 }
 
 .dropdown:hover .dropdown-box {
-  display: block;
+    display: block;
 
 }
-
 
 /* Interactive Drop Down */
 
 .dropbtn {
-  background-color: #00000000;
-  color: rgb(0, 0, 0);
-  padding: 16px;
-  border: none;
-  font-size: 24px;
-  cursor: pointer;
-  position: relative;
-  top: -1px;
-  right: 24px;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: rgba(255, 255, 255, 0.5);
+    background-color: #00000000;
+    color: rgb(0, 0, 0);
+    padding: 16px;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    position: relative;
+    top: -1px;
+    right: 24px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgba(255, 255, 255, 0.5);
 }
 
 .dropdiv {
-  overflow: auto;
-  padding-bottom: -10px;
-  border-radius: 0px 0px 15px 15px;
-  background-color: #4c081260;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  overflow: hidden;
+    overflow: auto;
+    padding-bottom: -10px;
+    border-radius: 0px 0px 15px 15px;
+    background-color: #4c081260;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    overflow: hidden;
 }
 
 @keyframes boxexpand {
