--- a/assets/css/mainstyle.css
+++ b/assets/css/mainstyle.css
@@ -106,6 +106,7 @@ main > div > * {
     position: absolute;
     top:-2px;
     transform: translateX(15px);
+    padding-left: 95%;
 }
 
 /* Footer Stuff */
@@ -123,6 +124,7 @@ footer {
     left: 50%;
     transform: translate(-50%, -50%) scale(101%);
     width: 100%;
+    height: 100%;
     z-index: -5;
     filter: url("#shake0");
 }
@@ -233,4 +235,12 @@ footer {
         transform: translateY(-5px);
         background-position: 100% 0;
     }
+}
+
+/* Mobile */
+
+ @media only screen and (max-width: 1000px) {
+  .backgroundimg {
+
+  }
 }
